gsap cheat sheet

--- a/text up down animation/index.html
+++ b/text up down animation/index.html
@@ -9,29 +9,29 @@
 </head>
 <body> 
   
-  <div class="flex flex-col w-full h-screen justify-center items-center text-8xl gap-8 overflow-hidden">
+  <div class="flex flex-col w-full h-screen justify-center items-center text-8xl gap-8 overflow-hidden align-top">
     <ul class="link">
       <li class="li relative">
-        <div class="absolute bottom-28">Home</div>
-        <div>Home</div>
+        <div class="absolute bottom-28">HOME</div>
+        <div>HOME</div>
       </li>
     </ul>
     <ul class="link">
       <li class="li relative">
-        <div class="absolute bottom-28">About</div>
-        <div>About</div>
+        <div class="absolute bottom-28">ABOUT</div>
+        <div>ABOUT</div>
       </li>
     </ul>
     <ul class="link">
       <li class="li relative">
-        <div class="absolute bottom-28">Projects</div>
-        <div>Projects</div>
+        <div class="absolute bottom-28">PROJECTS</div>
+        <div>PROJECTS</div>
       </li>
     </ul>
     <ul class="link">
       <li class="li relative">
-        <div class="absolute bottom-28">Contact</div>
-        <div>Contact</div>
+        <div class="absolute bottom-28">CONTACT</div>
+        <div>CONTACT</div>
       </li>
     </ul>
   </div>
