--- a/mouse follower/index.html
+++ b/mouse follower/index.html
@@ -19,51 +19,50 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, natus eveniet odio enim tempore numquam quis ratione quidem assumenda quod praesentium nesciunt sunt ea ut temporibus atque quasi itaque rem? Explicabo modi culpa voluptate, in quos tempora aperiam sint pariatur iste qui vitae cumque! Illo beatae blanditiis quo officiis dolorem sint delectus excepturi quia laudantium neque. Nulla, tempore natus eum porro maxime accusantium mollitia. Quas eveniet quasi voluptatem, eligendi voluptate impedit sapiente ratione quisquam vel provident animi, ea hic nobis?</p>
 
     <h3>hover effect Lorem?</h3>
-
-
-    
-
-
-    <script>
-      const cursor = new MouseFollower({
-        el: null,
-        container: document.body,
-        className: 'mf-cursor',
-        innerClassName: 'mf-cursor-inner',
-        textClassName: 'mf-cursor-text',
-        mediaClassName: 'mf-cursor-media',
-        mediaBoxClassName: 'mf-cursor-media-box',
-        iconSvgClassName: 'mf-svgsprite',
-        iconSvgNamePrefix: '-',
-        iconSvgSrc: '',
-        dataAttr: 'cursor',
-        hiddenState: '-hidden',
-        textState: '-text',
-        iconState: '-icon',
-        activeState: '-active',
-        mediaState: '-media',
-        stateDetection: {
-            '-pointer': 'a,button',
-            '-hidden': 'iframe'
-        },
-        visible: true,
-        visibleOnState: false,
-        speed: 0.55,
-        ease: 'expo.out',
-        overwrite: true,
-        skewing: 0,
-        skewingText: 0,
-        skewingIcon: 2,
-        skewingMedia: 2,
-        skewingDelta: 0.001,
-        skewingDeltaMax: 0.15,
-        stickDelta: 0.15,
-        showTimeout: 20,
-        hideOnLeave: true,
-        hideTimeout: 300,
-        hideMediaTimeout: 300
-     });
-  </script>
+    <br>
+    <button data-cursor-icon="arrow-left" data-cursor-stick>HOVER ME</button>
   </div>
+
+
+  <script>
+    const cursor = new MouseFollower({
+      el: null,
+      container: document.body,
+      className: 'mf-cursor',
+      innerClassName: 'mf-cursor-inner',
+      textClassName: 'mf-cursor-text',
+      mediaClassName: 'mf-cursor-media',
+      mediaBoxClassName: 'mf-cursor-media-box',
+      iconSvgClassName: 'mf-svgsprite',
+      iconSvgNamePrefix: '-',
+      iconSvgSrc: 'mouse follower/arrow.svg', // relative to the HTML file
+      dataAttr: 'cursor',
+      hiddenState: '-hidden',
+      textState: '-text',
+      iconState: '-icon',
+      activeState: '-active',
+      mediaState: '-media',
+      stateDetection: {
+          '-pointer': 'a,button',
+          '-hidden': 'iframe'
+      },
+      visible: true,
+      visibleOnState: false,
+      speed: 0.55,
+      ease: 'expo.out',
+      overwrite: true,
+      skewing: 0,
+      skewingText: 0,
+      skewingIcon: 2,
+      skewingMedia: 2,
+      skewingDelta: 0.001,
+      skewingDeltaMax: 0.15,
+      stickDelta: 0.15,
+      showTimeout: 20,
+      hideOnLeave: true,
+      hideTimeout: 300,
+      hideMediaTimeout: 300
+   });
+</script>
 </body>
 </html>
