made mouse follower using js

--- a/mouse follower/index.html
+++ b/mouse follower/index.html
@@ -20,7 +20,7 @@
 
     <h3>hover effect Lorem?</h3>
     <br>
-    <button data-cursor-icon="arrow-left" data-cursor-stick>HOVER ME</button>
+    <button data-cursor-icon="arrow-left" data-cursor-stick><a href="#">HOVER ME</a></button>
   </div>
 
 
