mouse follower using gsap

--- a/mf using gsap js/index.html
+++ b/mf using gsap js/index.html
@@ -10,12 +10,13 @@
   <div class="container">
     <h1>FOllOW MY MOUSE</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos quidem voluptatibus praesentium illo, quibusdam culpa non officia soluta, cupiditate totam cumque perspiciatis rerum mollitia ut itaque optio modi ab? Architecto modi pariatur tempora ad molestiae consequuntur esse earum quis saepe, porro a doloribus veniam laboriosam dolore dolor blanditiis ducimus atque, nulla iusto. Velit perferendis rem dolore quidem minima necessitatibus voluptatum sint vel commodi, corporis doloribus dolor eveniet aliquid? Necessitatibus accusantium vitae rem eveniet autem assumenda cupiditate fugiat officiis, recusandae voluptas ipsa officia ut, facilis quia explicabo commodi non in neque ad et eum voluptate est architecto perspiciatis! Distinctio, ducimus quisquam!</p>
-    <button><a href="">CLICK ME!</a></button>
+    <button>CLICK ME!</button>
   </div>
 
   
   <div class="mf"></div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
