mouse follower gsap js upgraded

--- a/mf using gsap js/index.html
+++ b/mf using gsap js/index.html
@@ -15,6 +15,7 @@
 
   
   <div class="mf"></div>
+  <div class="txt"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="index.js"></script>
