--- a/opening animation/index.html
+++ b/opening animation/index.html
@@ -11,11 +11,11 @@
     <div class="open">open</div>
     <div class="menu">
       <div class="close">X</div>
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Projects</li>
-      </ul>
+      <div class="menu-container">
+        <div class="menu-items"><div class="menu-text">HOME <div class="indicator"></div> </div></div>
+        <div class="menu-items"><div class="menu-text">ABOUT <div class="indicator"></div> </div></div>
+        <div class="menu-items"><div class="menu-text">CONTACT <div class="indicator"></div> </div></div>
+      </div>
     </div>
   </div>
   
