--- a/practice/index.html
+++ b/practice/index.html
@@ -10,7 +10,7 @@
   <div class="mx-auto w-1/3 h-80 bg-red-500 -z-10 bg-clip-text absolute">
     
   </div>
-  <h1 class="text-9xl text-center text-transparent">hellow world</h1>
+  <h1 class="text-9xl text-center text-transparent">Hellow world</h1>
   
 </body>
 </html>
