--- a/practice/index.html
+++ b/practice/index.html
@@ -7,10 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <div class="mx-auto w-1/3 h-80 bg-red-500 -z-10 bg-clip-text absolute">
-    
-  </div>
+  <div class="mx-auto w-1/3 h-80 bg-red-500 -z-10 bg-clip-text absolute"></div>
   <h1 class="text-9xl text-center text-transparent">Hellow world</h1>
-  
 </body>
 </html>
