--- a/gradient animation/index.html
+++ b/gradient animation/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Morph svg</title>
+  <title>gradient mouse follower</title>
   <link rel="stylesheet" href="index.css">
 
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
@@ -14,9 +14,8 @@
 
   <div class="container">
     <div class="gradient1"></div>
-    <!-- <div class="gradient2"></div>
-    <div class="gradient3"></div> -->
   </div>
+  <div class="circle"></div>
 
   <script src="index.js"></script>
 </body>
